# py3starter

./: .gitignore  .pep8  .pylintrc  README.md  example.py  install.bat  install.sh  pyproject.toml  setup.cfg  setup.py
src/py3starter/: example_module.py
src/py3starter/text_files/: mytextfile.txt
tests/unit_tests/: test_example_module.py
