[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py3starter"
version = "0.0.1"
description = "A starter Python 3 package"
requires-python = ">=3.11"

[tool.setuptools.package-data]
py3starter = ["*.txt"]

dependencies = []

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "flake8-bugbear",
    "flake8-broken-line",
    "flake8-comprehensions",
    "pep8-naming",
    "flake8-pyproject"
]

[tool.flake8]
max-line-length = 120
extend-ignore = "E203, E501"

[tool.black]
line-length = 120
target-version = ["py311"]