[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py3starter"
version = "0.0.1"
description = "A starter Python 3 package"
requires-python = ">=3.11"

[tool.setuptools.package-data]
py3starter = ["*.txt"]

dependencies = []

[project.optional-dependencies]
dev = [
    "black",
    "ruff"
]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-select = [
    "I", # isort
    "N", # pep8-naming
    "UP", # pyupgrade
    "RUF", # ruff
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "PTH", # flake8-use-pathlib
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
]
extend-ignore = ["RUF005", "E501"]
src = ["src"]

[tool.ruff.isort]
force-sort-within-sections = true
split-on-trailing-comma = false

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.flake8-bugbear]
extend-immutable-calls = ["typer.Argument"]

[tool.black]
line-length = 120
target-version = ["py311"]